--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </nav>
             </div>
     </footer>
-       <div class="popup popup-add-cats">
+    <div class="popup popup-add-cats">
         <div class="popup__container">
             <button class="popup__close btn"><i class="fa-solid fa-xmark"></i></button>
             <h2>Добавить питомца</h2>
@@ -88,14 +88,14 @@
         </div>
     </div>
     <div class="popup popup-image">
-        <div class="popup__container">
+        <div class="popup__container-image">
             <button class="popup__close btn popup__close_external"><i class="fa-solid fa-xmark"></i></button>
             <img src="#" class="popup__image" alt="Изображение">
         </div>
     </div>
     <template id="card-template">
         <div class="card">
-            <img src="#" alt="Изабражение" class="card__image">
+            <img src="#" class="card__image" alt="Изабражение">
             <a href="#" class="card__link">
                 <h3 class="card__name"></h3>
             </a>
@@ -104,9 +104,10 @@
     </template>
     <template id="cats-info-template">
         <div class="cat-info">
-            <button class="cat-info__edited" ><i class="fa-regular fa-pen-to-square"></i>Изменить</button>
-            <button class="cat-info__saved cat-info__saved_hidden"><i class="fa-solid fa-pen-to-square"></i>Сохранить</button>
-            <button class="cat-info__deleted"><i class="fa-solid fa-trash"></i>Удалить</button>
+            <button class="cat-info__edited"><i class="fa-regular fa-pen-to-square"></i> Изменить </button>
+            <button class="cat-info__saved cat-info__saved_hidden"><i
+                    class="fa-solid fa-pen-to-square"></i>Сохранить</button>
+            <button class="cat-info__deleted"><i class="fa-solid fa-trash"></i> Удалить </button>
             <img src="#" class="cat-info__image" loading="lazy">
             <span class="cat-info__id"></span>
             <div class="cat-info__title">
@@ -115,8 +116,8 @@
             </div>
             <span class="cat-info__rate"></span>
             <div class="cat-info__age">
-                <span class="cat-info__age-val"></span>
                 <span class="cat-info__age-text"></span>
+                <span class="cat-info__age-val"></span>
             </div>
             <p class="cat-info__desc"></p>
         </div>
